--- a/docs/manual.bib
+++ b/docs/manual.bib
@@ -660,3 +660,18 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160309320M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@inproceedings{Kushilevitz_et_al:1998,
+   author = {Kushilevitz, Eyal and Ostrovsky, Rafail and Rabani, Yuval},
+   title = {Efficient search for approximate nearest neighbor in high dimensional spaces},
+   booktitle = {Proceedings of the 30th annual ACM symposium on Theory of computing},
+   series = {STOC '98},
+   year = {1998},
+   isbn = {0-89791-962-9},
+   location = {Dallas, Texas, USA},
+   pages = {614--623},
+   numpages = {10},
+   acmid = {276877},
+   publisher = {ACM},
+   address = {New York, NY, USA},
+}
